# chat-based-community-dashboard

./: .cursorignore  .dockerignore  .env  .env-template  .env.cloudrun.example  .env.example  .eslintignore  .gcloudignore  .gitignore  API_DESIGN_SPECIFICATION.md  AUTHENTICATION_FLOW_DESIGN.md  CLOUD_RUN_DEPLOYMENT.md  COMPONENT_MAPPING_GUIDE.md  CONTRIBUTING.md  DATABASE_SCHEMA_DESIGN.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cloudrun  GITHUB_ISSUE_USER_SYNC.md  GITHUB_RELEASE_v0.1.md  LOCAL_SETUP.md  Lessons_Learned-Git.md  Lessons_Learned.md  MENTION_FORMATTING_FIX_SUMMARY.md  MIGRATION_PROJECT_PLAN.md  MIGRATION_STATUS_SUMMARY.md  MISSING_SIGNAL_FEATURES.md  README.md  README_Docker_Enhanced_Setup.md  README_Enhanced_User_Management.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.md  ROADMAP  ROADMAP.md  SCHEMA_FIX_PLAN.md  STREAMLIT_TO_MODERN_STACK_MIGRATION.md  SYSTEM_STATUS.md  USER_SYNC_FIX_SUMMARY.md  authentik-creation-workflow.py  authentik-streamlit.py  (+62 more)
app/: authentik_streamlit.py  force_sync.py  main.py  messages.py  streamlit_app.py  styles.css
archive/: CONTRIBUTING.md  STREAMLIT_USAGE_ANALYSIS.md  UI_MOCKUPS_DESIGN.md
archive_encryption_tests/: README.md  test_comprehensive_decryption.py  test_decrypt_messages.py  test_direct_chat_priority.py  test_enhanced_decryption.py  test_event_types.py  test_final_ui_verification.py  test_fixed_message_history.py  test_key_backup_recovery.py  test_manual_verification.py  test_megolm_decryption.py  test_message_to_sac.py  test_new_signal_room.py  test_raw_room_messages.py  test_sac_message_history.py  (+1 more)
(+1539 files in other folders)
