[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "community-dashboard"
version = "0.1"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A community dashboard application"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytz",
    "matrix-nio>=0.20.0",
    "pytest-asyncio>=0.23.0",
] 